<resources>
    <string name="app_name">Bavarder Chat</string>
    <string name="this_is_main_page">This is main Page</string>
    <string name="welcome_page">Welcome To Bavarder ChatApp</string>
    <string name="need_a_new_account">Need a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="create_account">create Account</string>
    <string name="logout">LogOut</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account</string>
</resources>
