<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:text="@string/welcome_page"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:id="@+id/have_account_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/already_have_account" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/have_account_btn"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/need_a_new_account" />

</RelativeLayout>